# IC

./: .gitignore
Lab_1/bit_stream/: README
Lab_1/bit_stream/src/: CMakeLists.txt  wav_lossy_dec.cpp  wav_lossy_enc.cpp  wav_quant_dec.cpp  wav_quant_enc.cpp
Lab_1/bit_stream/test/: clean.sh  get_quant_codec.sh
Lab_1/sndfile-example/: README  Results.md
Lab_1/sndfile-example/src/: CMakeLists.txt  wav_cmp.cpp  wav_fx.cpp  wav_fx.h  wav_hist.cpp  wav_hist.h  wav_quant.cpp  wav_quant.h  wav_quant2.cpp
Lab_1/sndfile-example/test/: bin2  bin4  clean.sh  get_cmp_figs.py  get_hist_figs.sh  get_quant_figs.sh  hist_plot.gp  plot.gp
Lab_1/sndfile-example/test/ex1_results/: Results.md
Lab_2/: README.md
Lab_2/src/: CMakeLists.txt  GolombUtils.cpp  GolombUtils.h  Makefile  golomb_main.cpp  imageCompress.cpp  image_inverter.cpp  image_ligth_modifier.cpp  image_mirror.cpp  image_rgb_splitter.cpp  image_rotate.cpp  mirror_image.cpp  rgb_splitter.cpp  rotate_image.cpp  test_zigzag.cpp  wav_lossless_dec.cpp  wav_lossless_enc.cpp
